--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@supports (-webkit-backdrop-filter: blur(30px) saturate(160%) contrast(45%) brightness(140%)) or
+  (backdrop-filter: blur(30px) saturate(160%) contrast(45%) brightness(140%)) {
+    .header, .keypad{
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.2);
+     backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(120%);
+     -webkit-backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
+    }
+
+  }
 
 .card-text.name {
   margin-right: 80%;
@@ -12,8 +22,18 @@ ul {
   background-image: linear-gradient(to bottom right, #04e7e7, #3d5afe,#251285);
   font-family: 'Montserrat', sans-serif;
   color: white;
+  padding: 0;
 }
 .btn {
   color: white;
   border: solid 1px white;
+}
+
+.input {
+  display: flex;
+  width: 100%;
+}
+.contacts {
+    font-family: 'Montserrat', sans-serif;
+    color: black;
 }
