--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-@supports (-webkit-backdrop-filter: blur(30px) saturate(160%) contrast(45%) brightness(140%)) or
-  (backdrop-filter: blur(30px) saturate(160%) contrast(45%) brightness(140%)) {
-    .header-content, .keypad{
-      width: 100%;
-      background-color: rgba(255, 255, 255, 0.2);
-     backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(120%);
-     -webkit-backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
-    }
-
+@supports (-webkit-backdrop-filter: blur(10px) saturate(160%) contrast(45%) brightness(100%)) or
+(backdrop-filter: blur(10px) saturate(160%) contrast(45%) brightness(100%)) {
+  .header-content, .keypad {
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px) saturate(100%) contrast(100%) brightness(100%);
+    -webkit-backdrop-filter: blur(20px) saturate(100%) contrast(100%) brightness(100%);
   }
+}
 
 .contact-card {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 3fr 1.5fr;
-  height: 60px;
+  height: 72px;
+  border: none;
+}
+.contact-card:hover {
+  background: lightgray;
+  opacity: 80%;
+}
+.list-group-item {
+  border-bottom: solid 1px lightgray;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .app-body {
   display: block;
-  background-image: linear-gradient(to bottom right, #04e7e7, #3d5afe,#251285);
+  background-image: linear-gradient(135deg, #04e7e7 10%, #3d5afe 55%, #251285 100%);
   font-family: 'Montserrat', sans-serif;
   width: 500px;
   color: white;
@@ -34,33 +41,33 @@ ul {
   align-items: center;
   justify-content: center;
   color: white;
-  border: solid 1px white;
+  border: solid white;
+  border-width: 0 0 0.1em 0.1em;
   border-radius: 0;
   height: 80px;
 }
 .btn:hover {
-  color: gray;
-  fill: gray;
+  color: lightgray;
+  opacity: 60%;
 }
-.btn img:hover {
-  fill: gray;
-}
+
 .input {
   display: flex;
   width: 100%;
 }
 .contacts {
-    font-family: 'Montserrat', sans-serif;
-    color: black;
-    height: 300px;
-    overflow: scroll;
-    background: white;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  height: 300px;
+  overflow: scroll;
+  background: white;
 }
 
 .header.container {
   display: grid;
-  grid-template-columns: 25% 10% 25%;
+  grid-template-columns: 25% 20% 25%;
   justify-content: center;
+  align-items: center;
   padding-bottom: 16px;
 }
 
@@ -84,6 +91,13 @@ ul {
   display: flex;
   justify-content: center;
 }
+
+.form-check-input {
+  height: 24px;
+  width: 36px !important;
+}
+
+
 .input.container {
   display: grid;
   margin: 10px 0;
@@ -114,7 +128,7 @@ button img {
   border-radius: 100px;
   border: none;
   height: 50px;
-  padding: 4px;
+  margin: 4px;
 }
 .keypad {
   display: grid;
